
	Arithmetic overflows now return float rather than wrapping around.
	* data.c: Include <intprops.h>.
	(arith_driver): Use floating point if the accumulator would otherwise
	go out of EMACS_INT range.
	(arith_driver, Fadd1, Fsub1): Use floating point if the result is
	out of Emacs fixnum range.
	* bytecode.c (exec_byte_code): Likewise, for Bsub1, Badd1, Bnegate.

	* callproc.c (Fcall_process): Use 'volatile' to avoid vfork clobbering.

	* process.c (Fformat_network_address): Fix typo: args2 -> *args2.

	* xmenu.c (set_frame_menubar): Fix typo: int * -> int (3 times).

	* coding.c (detect_coding_charset): Fix typo: * 2 -> *4 (Bug#8601).

	* charset.h (struct charset.code_space): Now has 15 elements, not 16.
	* charset.c (Fdefine_charset_internal): Don't initialize
	charset.code_space[15].  The value was garbage, on hosts with
	32-bit int (Bug#8600).

	* lread.c (read_integer): Be more consistent with string-to-number.
	Use string_to_number to do the actual conversion; this avoids
	rounding errors and fixes some other screwups.  Without this fix,
	for example, #x1fffffffffffffff was misread as -2305843009213693952.
	(digit_to_number): Move earlier, for benefit of read_integer.
	Return -1 if the digit is out of range for the base, -2 if it is
	not a digit in any supported base.  (Bug#8602)

	* doprnt.c (doprnt): Support arbitrary pI values, such as "I64".

	* dispnew.c (scrolling_window): Return 1 if we scrolled,
	to match comment at start of function.  This also removes a
	GCC warning about overflow in a 32+64-bit port.

	* lisp.h (EMACS_INT, EMACS_UINT, BITS_PER_EMACS_INT, pI): Simplify.

	* dbusbind.c: Do not use XPNTR on a value that may be an integer.
	Reported by Stefan Monnier in
	<http://lists.gnu.org/archive/html/emacs-devel/2011-04/msg00919.html>.
	(xd_remove_watch, Fdbus_init_bus, xd_read_queued_messages): Use
	SYMBOLP-guarded XSYMBOL, not XPNTR.

	* lisp.h (EMACS_INTPTR): Remove.  All uses changed to intptr_t.
	(EMACS_UINTPTR): Likewise, with uintptr_t.
